Updating dev workflow, 0.1.0 release

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
   <title>ng-context-menu</title>
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-  <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js" data-main="assets/js/app.js"></script>
+  <script src="//cdnjs.cloudflare.com/ajax/libs/require.js/2.1.10/require.min.js" data-main="public/js/app.js"></script>
 
   <style>
     .pointer {
