--- a/index.html
+++ b/index.html
@@ -11,8 +11,7 @@
   <title>ng-context-menu</title>
 
   <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.1.1/css/bootstrap.min.css" />
-  <script src="public/lib/requirejs/require.js" data-main="public/js/app.js"></script>
-
+  <link rel="stylesheet" href="http://ianwalter.github.io/flat-github-ribbon/dist/flat-github-ribbon.min.css" />
   <style>
     .pointer {
       cursor: pointer;
@@ -28,12 +27,14 @@
       position: fixed;
     }
   </style>
+
+  <script src="public/lib/requirejs/require.js" data-main="public/js/app.js"></script>
 </head>
 <body>
-<a href="https://github.com/ianwalter/ng-context-menu">
-  <img style="position: absolute; top: 0; right: 0; border: 0;"
-       src="https://s3.amazonaws.com/github/ribbons/forkme_right_red_aa0000.png" alt="Fork me on GitHub">
-</a>
+<div class="github-ribbon-container">
+  <a href="http://github.com/ianwalter/boyscout/"
+     class="github-ribbon peter-river">Visit Me on GitHub!</a>
+</div>
 <br>
 <div class="container">
   <div class="row">
